// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests from Stepper component With active index 0 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  justify-content: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  display: flex;
}

.c3 {
  background-color: #f8f9fa;
  width: 15px;
  height: 15px;
  border-radius: 15px;
}

.c5 {
  background-color: #0588cb;
  width: 15px;
  height: 15px;
  border-radius: 15px;
}

.c4 {
  background-color: #0588cb;
  width: 50px;
  height: 3px;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3"
  />
  <div
    className="c2 c4"
  />
  <div
    className="c2 c5"
  />
  <div
    className="c2 c4"
  />
  <div
    className="c2 c5"
  />
  <div
    className="c2 c4"
  />
  <div
    className="c2 c5"
  />
</div>
`;

exports[`Tests from Stepper component With active index 1 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  justify-content: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  display: flex;
}

.c3 {
  background-color: #f8f9fa;
  width: 15px;
  height: 15px;
  border-radius: 15px;
}

.c6 {
  background-color: #0588cb;
  width: 15px;
  height: 15px;
  border-radius: 15px;
}

.c4 {
  background-color: #f8f9fa;
  width: 50px;
  height: 3px;
}

.c5 {
  background-color: #0588cb;
  width: 50px;
  height: 3px;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3"
  />
  <div
    className="c2 c4"
  />
  <div
    className="c2 c3"
  />
  <div
    className="c2 c5"
  />
  <div
    className="c2 c6"
  />
  <div
    className="c2 c5"
  />
  <div
    className="c2 c6"
  />
</div>
`;

exports[`Tests from Stepper component With active index 2 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  justify-content: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  display: flex;
}

.c3 {
  background-color: #f8f9fa;
  width: 15px;
  height: 15px;
  border-radius: 15px;
}

.c6 {
  background-color: #0588cb;
  width: 15px;
  height: 15px;
  border-radius: 15px;
}

.c4 {
  background-color: #f8f9fa;
  width: 50px;
  height: 3px;
}

.c5 {
  background-color: #0588cb;
  width: 50px;
  height: 3px;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3"
  />
  <div
    className="c2 c4"
  />
  <div
    className="c2 c3"
  />
  <div
    className="c2 c4"
  />
  <div
    className="c2 c3"
  />
  <div
    className="c2 c5"
  />
  <div
    className="c2 c6"
  />
</div>
`;
